--- a/sofyruizportafolio/src/NavBar.css
+++ b/sofyruizportafolio/src/NavBar.css
@@ -17,16 +17,21 @@
     z-index: 10;
   }
 
-  .navbar-light .navbar-nav .nav-link {
+  .navbar-expand-lg .navbar-collapse{
     color:white;
     font-size: 1.5rem;
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif; 
+    justify-content: flex-end;
   }
 
-  .navbar-light .navbar-nav .nav-link:hover {
-    background: turquoise;
-    border-radius: 2rem;
+  .navbar-collapse{
+    justify-content: space-between;
   }
+
+  
+
+
+  
   
 
   
